fixing code coverage